@@ -115,7 +115,6 @@ Let's have a look how the clipboard looks now:
 
 Our clip is listed! Decent:
 
->>> browser.handleErrors = False
 >>> browser.open(base_url % (urllib.urlencode(
 ...     dict(Command='GetFoldersAndFiles',
 ...          Type='File',
@@ -135,3 +134,50 @@ Our clip is listed! Decent:
   </Files>
 </Connector>
 
+
+For easier image browsing the folder /bilder is automatically added to the root
+when it exists. Currently it doesn't exist. We saw that above. Create it:
+
+>>> browser.open('http://localhost/++skin++cms/repository')
+>>> menu = browser.getControl(name='add_menu')
+>>> menu.displayValue = ['Folder']
+>>> url = menu.value[0]
+>>> browser.open(menu.value[0])
+>>> browser.getControl("File name").value = 'bilder'
+>>> browser.getControl("Add").click()
+
+The root listing contains it now:
+
+>>> browser.open(base_url % (urllib.urlencode(
+...     dict(Command='GetFoldersAndFiles',
+...          Type='File',
+...          CurrentFolder='/'))))
+>>> print browser.contents
+<?xml version="1.0" encoding="UTF-8"?>
+<Connector resourceType="File" command="GetFoldersAndFiles">
+  <CurrentFolder path="/" url="http://xml.zeit.de"/>
+  <Folders>
+    <Folder name="bilder" title="bilder"/>
+    <Folder name="repository" title="repository"/>
+    <Folder name="zeit.cms.clipboard.clipboard.Clipboard"
+            title="Clipboard"/>
+  </Folders>
+  <Files>
+  </Files>
+</Connector>
+
+List it:
+
+>>> browser.open(base_url % (urllib.urlencode(
+...     dict(Command='GetFoldersAndFiles',
+...          Type='File',
+...          CurrentFolder='/bilder/'))))
+>>> print browser.contents
+<?xml version="1.0" encoding="UTF-8"?>
+<Connector resourceType="File" command="GetFoldersAndFiles">
+  <CurrentFolder path="/bilder/" url="http://xml.zeit.de"/>
+  <Folders>
+  </Folders>
+  <Files>
+  </Files>
+</Connector>
